force-app/main/default/objects/JBCXM__SurveyResponseTask__c/JBCXM__SurveyResponseTask__c.object-meta.xml
<CustomObject>
    <label>Survey Response Task</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Response Task</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>