force-app/main/default/objects/JBCXM__SurveyResponseTask__c/fields/JBCXM__SurveyParticipant__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SurveyParticipant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Participant</label>
    <referenceTo>JBCXM__SurveyParticipant__c</referenceTo>
    <relationshipName>SurveyResponseTask</relationshipName>
    <type>Lookup</type>
</CustomField>