force-app/main/default/objects/JBCXM__SurveyResponseTask__c/fields/JBCXM__TaskId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__TaskId__c</fullName>
    <label>Task ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>