force-app/main/default/objects/JBCXM__SurveyResponseTask__c/listViews/JBCXM__All.listView-meta.xml
<ListView>
    <fullName>JBCXM__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>JBCXM__Account__c</columns>
    <columns>JBCXM__Survey__c</columns>
    <columns>JBCXM__SurveyParticipant__c</columns>
    <columns>JBCXM__SurveyQuestion__c</columns>
    <columns>JBCXM__TaskId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>